--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,21 @@
 spring.application.name=MindWander
 
-spring.config.import=file:env.properties
-
-spring.datasource.url=jdbc:postgresql://localhost:5432/mindwander
-spring.datasource.username=postgres
-spring.datasource.password=${postgresql.password}
+# DATABASE (Koyeb)
+spring.datasource.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
-cloudinary.cloud_name=${cloud_name}
-cloudinary.api_key =${api_key}
-cloudinary.api_secret = ${api_secret}
+# CLOUDINARY
+cloudinary.cloud_name=${CLOUDINARY_CLOUD_NAME}
+cloudinary.api_key=${CLOUDINARY_API_KEY}
+cloudinary.api_secret=${CLOUDINARY_API_SECRET}
 
-#JWT
-jwt.duration = 1800000
-jwt.secret = bchdmjamcjekdnakfubqkdhckiwadffggggg1a2b3c4d5e6f7g8h9
+# JWT
+jwt.duration=1800000
+jwt.secret=${JWT_SECRET}
+
+# SERVER PORT (Render imposta automaticamente)
+server.port=${PORT:8080}
